.provarCaches/00D410000011HE0EAM/objects/rstkf__customextf__c.object
<CustomObject>
    <fields>
        <fullName>rstkf__br2_unmatchedamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total unmatched amount</inlineHelpText>
        <label>Unmatched Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_accountnumber__c</fullName>
        <label>Enter Account #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_effectiveperiod__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_effectiveyear__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_fromaccountno__c</fullName>
        <label>From Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_fromdate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_fromperiod__c</fullName>
        <label>From Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_periodordate__c</fullName>
        <label>Period or by Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By period</fullName>
                </value>
                <value>
                    <fullName>By date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_ratetype__c</fullName>
        <label>Exchange Rate Override Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_singleaccorrange__c</fullName>
        <label>One Account or a Range of Accounts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_spotratesource__c</fullName>
        <label>Source of exchange rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Daily Rate</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_toaccountno__c</fullName>
        <label>Through Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_todate__c</fullName>
        <label>Through date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_toperiod__c</fullName>
        <label>Through period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_typeofspotratepolicy__c</fullName>
        <label>Exchange Rate Assignment Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Daily Rates</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet Rates</fullName>
                </value>
                <value>
                    <fullName>Daily First,Then Balance Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_effectonbal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effect on Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_endingbalhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Post-Discn&apos;t Balance - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_endingbalmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Post-Discount Balance - Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_newdiscnttknhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Discount Taken - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_newdiscnttknmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Discount Taken - Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_postapplicbalhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Post-Application Balance - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_postapplicbalmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Post-Application Balance - Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_prediscbalhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Pre-Discount Balance - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_prediscbalmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Pre-Discount Balance - Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_runningbal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Running Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_allowableDisMaint__c</fullName>
        <label>Discn&apos;t Offered In Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_allowableDiscDate__c</fullName>
        <label>Discn&apos;t Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_amtAppliedARCurr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amt Applied in Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_applicationType__c</fullName>
        <label>Application Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_balRemainingARCurr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bal Remaining in Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_discntAmtARCurr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Taken in AR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_payment__c</fullName>
        <label>Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_suggestedApplied__c</fullName>
        <label>Suggested / Applied</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_bankglcash__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash to GL Amount - Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_crossSO__c</fullName>
        <label>Ok to cross sales order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look within order, then cross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_crosscurrs__c</fullName>
        <label>Ok to Cross Currencies?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look within currency, then cross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_crossdiv__c</fullName>
        <label>Ok to Cross Divisions?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look within division, then cross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_crossprojects__c</fullName>
        <label>Ok to Cross Projects?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look within project, then cross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_glcashcracct__c</fullName>
        <label>Cash to GL - Account Cr</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_glcashcracctdesc__c</fullName>
        <label>Cash to GL - Account Cr - Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_homeglcash__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash to GL Amount - Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_invcust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>customextf (Invoice Customer)</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_netcashpay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net Total Applied - Payment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_nodivisanydiv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unspecified Div Counts as Any Div?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_noprojisanyproj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unspecified Proj Counts as Any Proj?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_nosoisanyso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unspecified SO Counts as Any SO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_stillunapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Still Unapplied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_trialpayapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Application</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_amtnotselected__c</fullName>
        <label>Amount Not Selected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_disctknamt__c</fullName>
        <label>Discount Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_netpay__c</fullName>
        <label>Net Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashtogl_cashamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash to GL Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashtogl_trandate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__chkregistersinglepayment_fromBatchNo__c</fullName>
        <label>From Session Number Single Payment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__chkregistersinglepayment_reportType__c</fullName>
        <description>Report Type</description>
        <label>Report Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cr_frmtxndate__c</fullName>
        <description>cr_frmtxndate__c</description>
        <label>From Txn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__cr_fromdocnums__c</fullName>
        <description>cr_fromdocnums__c</description>
        <label>From Document Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cr_thrudocnums__c</fullName>
        <description>cr_thrudocnums__c</description>
        <label>Thru Document Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cr_thrutxndate__c</fullName>
        <description>cr_thrutxndate__c</description>
        <label>Thru Txn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__createdebitmemo_statementdate__c</fullName>
        <label>Statement Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_frombatchdate__c</fullName>
        <label>From Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includecashreceiptsbatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Cash Receipt Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includeincompletebatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Incomplete Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includenoncashtransferbatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Non-Cash Transfer Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includenonpostingtransactions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Non-Posting Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includepostedbatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Posted Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includeunpostbatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Unposted Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_postunpostedbatchesafterreport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Unposted Sessions After Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_queryindividualbatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Query Individual Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_throughbatchdate__c</fullName>
        <label>Through Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__crjournal_date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__cronExpression__c</fullName>
        <description>cronExpression</description>
        <label>Cron Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__custom_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>custom_glcmp__c</description>
        <inlineHelpText>Company</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__customext_date1__c</fullName>
        <description>Can be used for any custom date field</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__customext_date2__c</fullName>
        <label>From Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__customext_date3__c</fullName>
        <label>Through Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__deposit_date__c</fullName>
        <description>Deposit Date</description>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__depriciationDate__c</fullName>
        <description>depriciationDate</description>
        <label>Depriciation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__exchange_rate__c</fullName>
        <description>Exchange Rate</description>
        <label>Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__exchange_rate_schedule__c</fullName>
        <description>Type of Exchange Rate Schedule</description>
        <label>Type of Exchange Rate Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Locked-In Commitment Rate</fullName>
                </value>
                <value>
                    <fullName>Override Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_copyreportaccgrphead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, we will copy GLFSTMPLT7 records</description>
        <inlineHelpText>If true, we will copy GLFSTMPLT7 records</inlineHelpText>
        <label>Copy Report Account Group Headers?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_copyreportaccgrplines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, we will copy GLFSTMPLT8 records.</description>
        <inlineHelpText>If true, we will copy GLFSTMPLT8 records.</inlineHelpText>
        <label>Copy Report Account Group Lines?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_copysublines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Sublines?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_destglcmp__c</fullName>
        <description>Record name field of GLCMP in destination org.</description>
        <inlineHelpText>Record name field of GLCMP in destination org.</inlineHelpText>
        <label>Destination Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Company)</relationshipLabel>
        <relationshipName>finreportmovers01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_isdestnsndbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if destination org is a sandbox.</description>
        <label>Destination Org is a Sandbox?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_password__c</fullName>
        <inlineHelpText>Please enter password and security token for the organisation where template to be imported.</inlineHelpText>
        <label>Password for the Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_templateheader__c</fullName>
        <label>Template Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_username__c</fullName>
        <inlineHelpText>Please enter user name for the organisation where template to be imported.</inlineHelpText>
        <label>User Name for the Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_variant__c</fullName>
        <label>Template Variant</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__fixedassetoptions__c</fullName>
        <description>fixedassetoptions</description>
        <label>Processing Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Periodic Depreciation</fullName>
                </value>
                <value>
                    <fullName>Forecast Deprecation</fullName>
                </value>
                <value>
                    <fullName>Alternative Book Depreciation</fullName>
                </value>
                <value>
                    <fullName>Just Post Periodic Depreciation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbankacc_remainreconcile__c</fullName>
        <description>Remaining to Add/Reconcile</description>
        <inlineHelpText>Remaining to Add/Reconcile</inlineHelpText>
        <label>Remaining to Add/Reconcile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacc_stmtheader__c</fullName>
        <description>Statement Header</description>
        <inlineHelpText>Statement Header</inlineHelpText>
        <label>Statement Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_txntype__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Other Adjustments</fullName>
                </value>
                <value>
                    <fullName>Bank Fees/Service Charges</fullName>
                </value>
                <value>
                    <fullName>Bank Reports Credit Card Deposit</fullName>
                </value>
                <value>
                    <fullName>Bank Reports Credit Card Payment</fullName>
                </value>
                <value>
                    <fullName>Credit Card Processing Fee</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_chargeamount__c</fullName>
        <description>Charge Amount</description>
        <inlineHelpText>Charge Amount</inlineHelpText>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_expenseaccount__c</fullName>
        <description>Expense Account</description>
        <inlineHelpText>Expense Account</inlineHelpText>
        <label>Expense Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_localcurrentbalance__c</fullName>
        <description>Current Balance</description>
        <inlineHelpText>Current Balance</inlineHelpText>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_localpayment__c</fullName>
        <description>Payment Amount</description>
        <inlineHelpText>Payment Amount</inlineHelpText>
        <label>Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_localtxndate__c</fullName>
        <description>Payment Txn Date</description>
        <inlineHelpText>Payment Txn Date</inlineHelpText>
        <label>Payment Txn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_totalSelectedRow__c</fullName>
        <description>Selected Row</description>
        <inlineHelpText>Selected Row</inlineHelpText>
        <label>Selected Row</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_totalpayment__c</fullName>
        <description>Total Payment</description>
        <inlineHelpText>Total Payment for Selected Rows</inlineHelpText>
        <label>Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_transactiontype__c</fullName>
        <inlineHelpText>Bank Card Transaction Type</inlineHelpText>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interest Charge</fullName>
                </value>
                <value>
                    <fullName>Balance Adjustment</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Bank Charge</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Bank Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_txngroup__c</fullName>
        <description>Transaction Group</description>
        <inlineHelpText>Transaction Group</inlineHelpText>
        <label>Transaction Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkcard_balaftsettlement__c</fullName>
        <description>Balance after Settlement</description>
        <inlineHelpText>This is the Bank Card amount balance after Settlement. This should agree to the balance in the Associated GL Account (shown above).</inlineHelpText>
        <label>Balance after Settlement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glcloseproc_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Company for which this GL Close applies.</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Company)</relationshipLabel>
        <relationshipName>customextf5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcloseproc_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Fiscal Year for which GL Close needs to be process.</inlineHelpText>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcloseproc_period__c</fullName>
        <inlineHelpText>Select the Period for which GL Close need to be done (showing only those periods which are not closed yet).</inlineHelpText>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Template ID</label>
        <referenceTo>rstkf__glfstmplt1__c</referenceTo>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone From Format</label>
        <referenceTo>rstkf__glfstmplt2__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>ZZ_customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone from Line Header</label>
        <referenceTo>rstkf__glfstmplt4__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_accountTitle__c</fullName>
        <description>Account Title</description>
        <inlineHelpText>Account Title</inlineHelpText>
        <label>Account Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_totalCredits__c</fullName>
        <description>Total Credits</description>
        <inlineHelpText>Total Credits</inlineHelpText>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_totalDebits__c</fullName>
        <description>Total Debits</description>
        <inlineHelpText>Total Debits</inlineHelpText>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_accountTitle__c</fullName>
        <description>Account Title</description>
        <inlineHelpText>Account Title</inlineHelpText>
        <label>Account Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_totalCredits__c</fullName>
        <description>Total Credits</description>
        <inlineHelpText>Total Credits</inlineHelpText>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_totalDebits__c</fullName>
        <description>Total Debits</description>
        <inlineHelpText>Total Debits</inlineHelpText>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>